--- a/UISwipeGestureRecognizerTest/UISwipeGestureRecognizerTest/Base.lproj/Main.storyboard
+++ b/UISwipeGestureRecognizerTest/UISwipeGestureRecognizerTest/Base.lproj/Main.storyboard
@@ -17,25 +17,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbX-JG-Oy0">
-                                <rect key="frame" x="189" y="243" width="223" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbX-JG-Oy0">
+                                <rect key="frame" x="250.5" y="243" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="14C-Er-Pd1"/>
+                                    <constraint firstAttribute="width" constant="100" id="DC9-bo-ucA"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Q8-Ov-3hQ">
-                                <rect key="frame" x="277" y="334" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Q8-Ov-3hQ">
+                                <rect key="frame" x="277" y="343" width="46" height="30"/>
                                 <color key="backgroundColor" red="0.53356451890000001" green="1" blue="0.74168975969999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Eap-Gc-LA8"/>
+                                    <constraint firstAttribute="width" constant="46" id="Iju-k2-KKf"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="buttonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UJc-Fb-Hj3"/>
                                 </connections>
                             </button>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2V7-Vi-G0R">
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2V7-Vi-G0R">
                                 <rect key="frame" x="276" y="144" width="51" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="Z1V-mE-sX1"/>
+                                    <constraint firstAttribute="width" constant="49" id="anG-iT-WyC"/>
+                                </constraints>
                             </switch>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2V7-Vi-G0R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7rT-t3-MGg"/>
+                            <constraint firstItem="6Q8-Ov-3hQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="J3b-Rx-PZG"/>
+                            <constraint firstItem="YbX-JG-Oy0" firstAttribute="top" secondItem="2V7-Vi-G0R" secondAttribute="bottom" constant="68" id="asd-uU-Kz6"/>
+                            <constraint firstItem="YbX-JG-Oy0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e6W-cr-7lF"/>
+                            <constraint firstItem="6Q8-Ov-3hQ" firstAttribute="top" secondItem="YbX-JG-Oy0" secondAttribute="bottom" constant="70" id="ncN-jy-Cp9"/>
+                            <constraint firstItem="2V7-Vi-G0R" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="124" id="yOh-fk-XCb"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="s" destination="2V7-Vi-G0R" id="3BV-Wa-Lq0"/>
